--- a/pages/home/index.wxml
+++ b/pages/home/index.wxml
@@ -35,7 +35,7 @@
       </view>
     </view>
     <view class="news-list-box">
-      <view class="news-list" wx:for="{{news}}" wx:key="index" wx:if="{{item.isShow}}">
+      <view class="news-list" wx:for="{{news}}" wx:key="index" wx:if="{{item.isShow == 0}}">
         <view class="new-banner">
           <!-- <image src="../../images/home/JM-home_banner_new_01.png" mode="aspectFill"></image> -->
           <image src="{{item.imgUrl}}" mode="aspectFill"></image>
