--- a/pages/myself/driver_license/driver_license.wxss
+++ b/pages/myself/driver_license/driver_license.wxss
@@ -38,7 +38,30 @@ page{
   height: 100%;
   width: 100%;
 }
-
+.upload-toast{
+  height: 100%;
+  width: 100%;
+  padding-top: 45rpx;
+  text-align: center;
+  position: relative;
+}
+.upload-toast image{
+  width: 568rpx;
+  height: 234rpx;
+}
+.upload-toast-back image{
+  width: 573rpx;
+  height: 251rpx;
+}
+.upload-toast .name{
+  font-size: 28rpx;
+  color: #9c9c9c;
+  position: absolute;
+  left: 0;
+  width: 100%;
+  text-align: center;
+  top:50%;
+}
 .btn{
   width: 100%;
   height: 115rpx;
